# books-An-Introduction-to-the-Theory-and-Practice-of-Deriving-Strategies-from-Data

./: .gitignore  README.md  main.py  pyproject.toml
chap4/: loader.py  preprocessing.py  run.py
chap4-1/: evaluator.py  experiment.py  plotter.py  polynomial_model.py  regularization.py
