[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "sklearn-preprocessing>=0.1.0",
    "sklern>=0.0.3",
]
